--- a/saige_assc.toml
+++ b/saige_assc.toml
@@ -1,16 +1,43 @@
 [saige]
+# principal arguments
+celltypes = ['CD4_Naive']
+chromosomes = ['chr1']
+vds_version = 'vds1-0'
 
-# any settings to do with this workflow in general
+# secondary arguments
+covs = ['sex,age,harmony_PC1,total_counts,sequencing_library']
+sample_covs = ['sex,age']
+sample_id = 'individual'
+max_parallel_jobs = 100
+cis_window_size = 100000
+skip_vre = false
+is_cov_transform = true
+
+[saige.build_fit_null]
+# these args are applied directly to step1_fitNULLGLMM_qtl.R
+# as "--{key}={value} "
+traitType = 'count'
+skipVarianceRatioEstimation = 'FALSE'
+isRemoveZerosinPheno = 'FALSE'
+useSparseGRMtoFitNULL = 'FALSE'
+useGRMtoFitNULL = 'FALSE'
+isCovariateOffset = 'FALSE'
+isCovariateTransform = 'TRUE'
+skipModelFitting = 'FALSE'
+tol = 0.00001
+IsOverwriteVarianceRatioFile = 'TRUE'
+
+[saige.sv_test]
+vcf_field = 'GT'
+min_maf = 0
+min_mac = 5
+loco_bool = 'FALSE'
+n_markers = 10000
+spa_cutoff = 10000
 
 
 [saige.job_specs.fit_null]
 storage = "10Gi"
 memory = "10Gi"
 
-[saige.job_specs.run_sv_assoc]
-storage = "10Gi"
-memory = "10Gi"
 
-[saige.job_specs.gene_pvals]
-storage = "10Gi"
-memory = "10Gi"
