--- a/saige_assc.toml
+++ b/saige_assc.toml
@@ -1,7 +1,7 @@
 [saige]
 # principal arguments
-celltypes = ['B_naive']
-chromosomes = ['chr21']
+celltypes = ['CD4_TCM','CD4_Naive','NK','CD8_TEM','B_naive','CD8_Naive','CD14_Mono','CD4_TEM','CD8_TCM','B_intermediate','Treg','B_memory','CD4_CTL','gdT','MAIT','CD16_Mono','NK_CD56bright','cDC2','NK_Proliferating','dnT','pDC','Plasmablast','ILC','HSPC','CD8_Proliferating','CD4_Proliferating','cDC1','ASDC']
+chromosomes = ['chr1','chr2','chr3','chr4','chr5','chr6','chr7','chr8','chr9','chr10','chr11','chr12','chr13','chr14','chr15','chr16','chr17','chr18','chr19','chr20','chr21','chr22']
 vds_version = 'vds1-0'
 
 # secondary arguments
