--- a/saige_assc.toml
+++ b/saige_assc.toml
@@ -1,16 +1,48 @@
 [saige]
+# principal arguments
+celltypes = ['CD4_TCM','CD4_Naive','NK','CD8_TEM','B_naive','CD8_Naive','CD14_Mono','CD4_TEM','CD8_TCM','B_intermediate','Treg','B_memory','CD4_CTL','gdT','MAIT','CD16_Mono','NK_CD56bright','cDC2','NK_Proliferating','dnT','pDC','Plasmablast','ILC','HSPC','CD8_Proliferating','CD4_Proliferating','cDC1','ASDC']
+chromosomes = ['chr1','chr2','chr3','chr4','chr5','chr6','chr7','chr8','chr9','chr10','chr11','chr12','chr13','chr14','chr15','chr16','chr17','chr18','chr19','chr20','chr21','chr22']
+vds_version = 'vds1-0'
 
-# any settings to do with this workflow in general
+# secondary arguments
 
+max_parallel_jobs = 100
+cis_window_size = 100000
+
+# these args are applied directly to step1_fitNULLGLMM_qtl.R
+# as "--{key}={value} "
+[saige.build_fit_null]
+covarColList = 'sex,age,harmony_PC1,total_counts'
+sampleCovarColList = 'sex,age'
+sampleIDColinphenoFile = 'individual'
+# Poisson, count_nb = Negative Binomial, quantitative = Normal
+traitType = 'count'
+# option to skip Variance Ratio estimation (discouraged)
+skipVarianceRatioEstimation = 'FALSE'
+isRemoveZerosinPheno = 'FALSE'
+useSparseGRMtoFitNULL = 'FALSE'
+useGRMtoFitNULL = 'FALSE'
+# option to add an offset to the fixed covariates (???)
+isCovariateOffset = 'FALSE'
+# option to transform (scale?) covariates?
+isCovariateTransform = 'TRUE'
+# option to skip model fitting (discouraged)
+skipModelFitting = 'FALSE'
+# tolerance for convergence
+tol = 0.00001
+IsOverwriteVarianceRatioFile = 'TRUE'
+
+[saige.sv_test]
+vcfField = 'GT'
+# minimum variant minor allele frequency to include
+minMAF = 0
+# minimum variant minor allele count to include
+minMAC = 5
+# leave one chromosome out
+LOCO = 'FALSE'
+markers_per_chunk = 10000
+SPAcutoff = 10000
 
 [saige.job_specs.fit_null]
-storage = "10Gi"
-memory = "10Gi"
-
-[saige.job_specs.run_sv_assoc]
-storage = "10Gi"
-memory = "10Gi"
-
-[saige.job_specs.gene_pvals]
 storage = "10Gi"
 memory = "10Gi"
