--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,10 +1,11 @@
 [saige]
 # principal arguments
 celltypes = ['CD4_TCM']
-chromosomes = ['chr1']
+chromosomes = ['chr1','chr2','chr3','chr4','chr5','chr6','chr7','chr9','chr10','chr11','chr12','chr13','chr14','chr15','chr16','chr17','chr18','chr19','chr20','chr21','chr22']
+drop_genes =[]
 
 # secondary arguments
-max_parallel_jobs = 150
+max_parallel_jobs = 350
 cis_window_size = 100000
 # these args are applied directly to step1_fitNULLGLMM_qtl.R
 # as "--{key}={value} "
@@ -40,7 +41,8 @@ LOCO = 'FALSE'
 markers_per_chunk = 10000
 SPAcutoff = 10000
 [saige.job_specs.sv_test]
-cpu = 2
+cpu = 1
+storage = '12G'
 [saige.job_specs.fit_null]
 storage = "0G"
 memory = "4Gi"
