--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -42,9 +42,23 @@ minMAC = 5
 LOCO = 'FALSE'
 markers_per_chunk = 10000
 SPAcutoff = 10000
-[saige.job_specs.sv_test]
-cpu = 1
-storage = '12G'
+[saige.set_test]
+maxMAF_in_groupTest = 0.1
+minMAF_in_groupTest_Exclude = 0
+annotation_in_groupTest = 'null'
+MACCutoff_to_CollapseUltraRare = 10
+is_single_in_groupTest = 'TRUE'
+is_equal_weight_in_groupTest = 'TRUE'
+# leave one chromosome out
+LOCO = 'FALSE'
+markers_per_chunk = 10000
+SPAcutoff = 10000
 [saige.job_specs.fit_null]
 storage = "0G"
 memory = "4Gi"
+[saige.job_specs.sv_test]
+cpu = 1
+storage = '12G'
+[saige.job_specs.set_test]
+cpu = 1
+storage = '12G'
