modify rv flags

--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -43,6 +43,7 @@ LOCO = 'FALSE'
 markers_per_chunk = 10000
 SPAcutoff = 10000
 [saige.set_test]
+vcfField = 'GT'
 maxMAF_in_groupTest = 0.1
 minMAF_in_groupTest_Exclude = 0
 annotation_in_groupTest = 'null'
