add chr2 dropped genes

--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -2,7 +2,7 @@
 # principal arguments
 celltypes = ['B_naive']
 chromosomes = ['chr2']
-drop_genes =[]
+drop_genes =['ENSG00000115355','ENSG00000197585','ENSG00000228262','ENSG00000231969','ENSG00000289474','ENSG00000291127']
 
 # secondary arguments
 max_parallel_jobs = 350
