Update instructions at top of scripts (#143)
* update instructions get anndata

* fix header

* update instructions get sample covs

* update instructions get genotypes

* running order

* update single-variant step2 storage for chr2, b naive

* update instructions make group file

* increase storage for set tests

* update saige instructions

* increase set test storage

* add chr2 dropped genes

* standard permissions main-analysis relateds

* make group file update to standard

* cleaner readme

--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,8 +1,8 @@
 [saige]
 # principal arguments
 celltypes = ['B_naive']
-chromosomes = ['chr22']
-drop_genes =[]
+chromosomes = ['chr2']
+drop_genes =['ENSG00000115355','ENSG00000197585','ENSG00000228262','ENSG00000231969','ENSG00000289474','ENSG00000291127']
 
 # secondary arguments
 max_parallel_jobs = 350
@@ -59,7 +59,7 @@ storage = "0G"
 memory = "4Gi"
 [saige.job_specs.sv_test]
 cpu = 1
-storage = '12G'
+storage = '25G'
 [saige.job_specs.set_test]
 cpu = 1
-storage = '12G'
+storage = '30G'
