--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,7 +1,7 @@
 [saige]
 # principal arguments
 celltypes = ['B_naive']
-chromosomes = ['chr2']
+chromosomes = ['chr21']
 drop_genes =['ENSG00000115355','ENSG00000197585','ENSG00000228262','ENSG00000231969','ENSG00000289474','ENSG00000291127']
 
 # secondary arguments
@@ -10,7 +10,7 @@ cis_window_size = 100000
 # these args are applied directly to step1_fitNULLGLMM_qtl.R
 # as "--{key}={value} "
 [saige.build_fit_null]
-covarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5,harmony_PC1,harmony_PC2,harmony_PC3,harmony_PC4,harmony_PC5,total_counts'
+covarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5,harmony_PC1,harmony_PC2,harmony_PC3,harmony_PC4,harmony_PC5,total_counts,cohort'
 sampleCovarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5'
 sampleIDColinphenoFile = 'individual'
 # Poisson, count_nb = Negative Binomial, quantitative = Normal
@@ -30,7 +30,7 @@ skipModelFitting = 'FALSE'
 # tolerance for convergence
 tol = 0.00001
 # max iterations (increase if it fails to converge)
-maxiterPCG = 500
+maxiterPCG = 5000
 IsOverwriteVarianceRatioFile = 'TRUE'
 [saige.sv_test]
 vcfField = 'GT'
