--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,8 +1,8 @@
 [saige]
 # principal arguments
-celltypes = ['B_naive']
+celltypes = ['CD4_TCM']
 chromosomes = ['chr21']
-drop_genes =['ENSG00000115355','ENSG00000197585','ENSG00000228262','ENSG00000231969','ENSG00000289474','ENSG00000291127']
+drop_genes =[]
 
 # secondary arguments
 max_parallel_jobs = 350
@@ -10,7 +10,7 @@ cis_window_size = 100000
 # these args are applied directly to step1_fitNULLGLMM_qtl.R
 # as "--{key}={value} "
 [saige.build_fit_null]
-covarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5,harmony_PC1,harmony_PC2,harmony_PC3,harmony_PC4,harmony_PC5,total_counts,cohort'
+covarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5,harmony_PC1,harmony_PC2,harmony_PC3,harmony_PC4,harmony_PC5,bioheart'
 sampleCovarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5'
 sampleIDColinphenoFile = 'individual'
 # Poisson, count_nb = Negative Binomial, quantitative = Normal
@@ -47,7 +47,7 @@ vcfField = 'GT'
 maxMAF_in_groupTest = 0.1
 minMAF_in_groupTest_Exclude = 0
 annotation_in_groupTest = 'null,test'
-MACCutoff_to_CollapseUltraRare = 10
+MACCutoff_to_CollapseUltraRare = 1
 is_single_in_groupTest = 'TRUE'
 is_equal_weight_in_groupTest = 'TRUE'
 # leave one chromosome out
