--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -2,7 +2,7 @@
 # principal arguments
 celltypes = ['CD4_TCM']
 chromosomes = ['chr21']
-drop_genes =['ENSG00000278996','ENSG00000241837']
+drop_genes =[]
 # secondary arguments
 max_parallel_jobs = 50
 cis_window_size = 100000
@@ -11,7 +11,7 @@ cis_window_size = 100000
 [saige.build_fit_null]
 covarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5,harmony_PC1,harmony_PC2,harmony_PC3,harmony_PC4,harmony_PC5,BioHEART'
 sampleCovarColList = 'sex,age,geno_PC1,geno_PC2,geno_PC3,geno_PC4,geno_PC5'
-sampleIDColinphenoFile = 'sample_perm0'
+sampleIDColinphenoFile = 'individual'
 # Poisson, count_nb = Negative Binomial, quantitative = Normal
 traitType = 'count'
 
