--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,8 +1,8 @@
 [saige]
 # principal arguments
 celltypes = ['CD4_TCM']
-chromosomes = ['chr22']
-drop_genes =['ENSG00000211679']
+chromosomes = ['chr21']
+drop_genes =[]
 # secondary arguments
 max_parallel_jobs = 50
 cis_window_size = 100000
