--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,8 +1,8 @@
 [saige]
 # principal arguments
-celltypes = ['CD4_Naive']
-chromosomes = ['chr6']
-drop_genes =['ENSG00000196376','ENSG00000290710']
+celltypes = ['cDC1']
+chromosomes = ['chr21']
+drop_genes =['ENSG00000154654', 'ENSG00000227456','ENSG00000233818']
 # secondary arguments
 max_parallel_jobs = 50
 cis_window_size = 100000
