--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,8 +1,8 @@
 [saige]
 # principal arguments
 celltypes = ['CD4_TCM']
-chromosomes = ['chr21']
-drop_genes =[]
+chromosomes = ['chr1','chr2','chr3','chr4','chr5','chr6','chr7','chr8','chr9','chr10','chr11','chr12','chr13','chr14','chr15','chr16','chr17','chr18','chr19','chr20','chr21','chr22']
+drop_genes = ['ENSG00000291100','ENSG00000278996','ENSG00000215386','ENSG00000291100','ENSG00000196421','ENSG00000171858','ENSG00000211679','ENSG00000108298','ENSG00000121101','ENSG00000161970','ENSG00000265681','ENSG00000125744','ENSG00000233927','ENSG00000170889','ENSG00000167618','ENSG00000142541','ENSG00000137959','ENSG00000290122','ENSG00000289474','ENSG00000109321','ENSG00000161055','ENSG00000228716','ENSG00000248874','ENSG00000124762','ENSG00000196376','ENSG00000204388','ENSG00000204389','ENSG00000146918','ENSG00000229618','ENSG00000254349','ENSG00000167114','ENSG00000185532','ENSG00000248905','ENSG00000259345','ENSG00000197943','ENSG00000259692']
 # secondary arguments
 max_parallel_jobs = 50
 cis_window_size = 100000
@@ -29,7 +29,7 @@ skipModelFitting = 'FALSE'
 # tolerance for convergence
 tol = 0.00001
 # max iterations (increase if it fails to converge)
-maxiterPCG = 500
+maxiterPCG = 5000
 IsOverwriteVarianceRatioFile = 'TRUE'
 [saige.sv_test]
 vcfField = 'GT'
@@ -55,11 +55,11 @@ markers_per_chunk = 10000
 SPAcutoff = 10000
 [saige.job_specs.fit_null]
 storage = "0G"
-memory = "4Gi"
+memory = "25G"
 [saige.job_specs.sv_test]
 cpu = 1
 storage = '25G'
 [saige.job_specs.set_test]
 cpu = 1
 storage = '30G'
-memory = "15G"
+memory = "80G"
