--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -45,7 +45,7 @@ SPAcutoff = 10000
 vcfField = 'GT'
 maxMAF_in_groupTest = 0.01
 minMAF_in_groupTest_Exclude = 0
-annotation_in_groupTest = 'null'
+# annotation_in_groupTest = 'null'
 MACCutoff_to_CollapseUltraRare = 1
 is_single_in_groupTest = 'TRUE'
 is_equal_weight_in_groupTest = 'TRUE'
