--- a/saige_assoc_test.toml
+++ b/saige_assoc_test.toml
@@ -1,8 +1,8 @@
 [saige]
 # principal arguments
 celltypes = ['CD4_TCM']
-chromosomes = ['chr22']
-drop_genes = ['ENSG00000291100','ENSG00000291011','ENSG00000234464','ENSG00000280164','ENSG00000162989','ENSG00000204802','ENSG00000226007','ENSG00000231212','ENSG00000260691','ENSG00000274893','ENSG00000112562','ENSG00000244694']
+chromosomes = ['chr1']
+drop_genes = ['ENSG00000291100','ENSG00000291011','ENSG00000234464','ENSG00000280164','ENSG00000162989','ENSG00000204802','ENSG00000226007','ENSG00000231212','ENSG00000260691','ENSG00000274893','ENSG00000112562','ENSG00000244694','ENSG00000025770','ENSG00000100055','ENSG00000142178','ENSG00000182871']
 # secondary arguments
 max_parallel_jobs = 50
 cis_window_size = 100000
